convertedToMDAPI/objects/Material__c.object
<CustomObject>
    <label>Material</label>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MaterialForm__c</fullName>
        <label>Material Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fresh</fullName>
                </value>
                <value>
                    <fullName>Frozen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaterialNumber__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Material Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageDateTime__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Message Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MinimumRemainingShelfLife__c</fullName>
        <label>Minimum Remaining Shelf Life</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NationalDrugCodeNDC__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>National Drug Code (NDC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonForChange__c</fullName>
        <description>Nayaksa3 10-6-2015: Created to support audit trail framework</description>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>CCL Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Round_Rule__c</fullName>
        <description>Rounding Rule fed from SAP. The value currently being stored in this field will provide no added functionality for Cell Chain Link, but may be used in the future.</description>
        <label>Round Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShelfLifeMeasuringUnit__c</fullName>
        <label>Shelf Life Measuring Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShelfLife__c</fullName>
        <label>Shelf Life</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StorageCondition__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Storage Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APH</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PP1</fullName>
                </value>
                <value>
                    <fullName>PP2</fullName>
                </value>
                <value>
                    <fullName>FP1</fullName>
                </value>
                <value>
                    <fullName>FP2</fullName>
                </value>
                <value>
                    <fullName>FP3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NC/Kg</fullName>
                </value>
                <value>
                    <fullName>TNC</fullName>
                </value>
                <value>
                    <fullName>mL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>BOM</fullName>
        <active>true</active>
        <label>BOM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material</fullName>
        <active>true</active>
        <label>Material</label>
    </recordTypes>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MaterialNumber__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>